--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,13 @@
 
 Package: MyTemplate
-Title: My RMarkdown Template
-Description: A reusable RMarkdown template for reports.
-Version: 0.1
+Type: Package
+Title: Custom RMarkdown Templates
+Version: 0.1.0
 Author: Varun Ranganath
 Maintainer: v.ranganath@uq.edu.au
+Description: Provides a custom R Markdown template.
 License: MIT
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.2.3
+Imports: rmarkdown
