--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Type: Package
 Title: Custom RMarkdown Templates
 Version: 0.1.0
 Author: Varun Ranganath
-Maintainer: v.ranganath@uq.edu.au
+Maintainer: Varun Ranganath <v.ranganath@uq.edu.au>
 Description: Provides a custom R Markdown template.
 License: MIT
 Encoding: UTF-8
