--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,3 @@
-
 Package: AAGIHTML
 Type: Package
 Title: Custom RMarkdown Templates
@@ -6,7 +5,7 @@ Version: 0.1.0
 Author: Varun Ranganath
 Maintainer: Varun Ranganath <v.ranganath@uq.edu.au>
 Description: Provides a custom R Markdown template.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
